# handy-tips

./: .gitignore  README.md
bash/: dry-run-a-potentially-dangerous-script.md
cpp/: README-in-detail.md  README.md  exception-throw-exception-from-ctor.cpp  exception-throw-exception.cpp  implicitly-type-conversion.cpp  wordexp.c
cpp/cpp17/: readme.md  structed_binding.cpp  template_argument_deduction.cpp
docs/: CPython-vs-Cython.md  README.md  example-carla-Util-BuildTools-Check.sh  gdb.md  pip.md  principles-based-coding.md  pytest.md  python-classmethod-vs-staticmethod.md  python-swap.md  tox.md  unittest.md
groovy/: README.md  exam-map.get.groovy
modern-cpp-archetype/: .clang-format  .formatter  CMakeLists.txt  Makefile  README.md  clang-format.py  do_coverage.sh
modern-cpp-archetype/cmake/: utility.cmake
modern-cpp-archetype/examples/: CMakeLists.txt  employee.cpp
modern-cpp-archetype/modules/: CMakeLists.txt
modern-cpp-archetype/modules/project/: CMakeLists.txt  employee.cpp  employee.h  test_employee.cpp  test_gmock.cpp  test_mocking_free_function.cpp
python/: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  list.md  mypy.ini  sanitizer.sh  setup.cfg  setup.py  tox.ini
python/docs/: conf.py  index.rst
python/doctest-tutorial/: calculations.py  doucument-and-test-at-once.py  greet.py  printed_output.py  queue.py  readme.md  test_calculations.py  test_calculations.txt
python/src/handypy/: division.py  skeleton.py
python/tests/: conftest.py  test_division.py  test_move_zero.py  test_pass-by-reference.py  test_skeleton.py  test_string-size.py  test_swap.py
python/tips/: get-last-part-of-path.py  numeric_regex.py  shell_quote.py
python/unittest-tutorial/: README.md  calculator.py  filesystem.py  mylib.py  test_add_fish_to_aquarium.py  test_add_fish_to_aquarium_exception.py  test_advanced_fish_tank.py  test_distinguishing-test-iterations-using-subtests.py  test_fish_tank.py  test_mock-blog.py  test_mock-calculator.py  test_mock-fileystem.py  test_mock-pitfall.py  test_mock-quick-guide.py  test_skipping-tests-and-expected-failures.py  test_test-fixture.py  test_test-suite.py  test_unittest-pysrc.py
